feat: impl follow set calculation